<resources>
    <string name="app_name">MusicBot</string>
    <string name="title_activity_main">MusicBot</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_server_host">Server host</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_search">Search %s</string>
    <string name="search_hint">Search for a song</string>
    <string name="image_content_description">album artwork</string>
    <string name="title_activity_search">Search</string>
    <string name="search_loading">Loading...</string>
    <string name="search_failed">Failure</string>

    <string name="get_queue_failed">Connection failed</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_exists">User already exists</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="action_logout">Log out</string>
    <string name="invalid_url">Invalid bot url. Please change it…</string>
    <string name="queue_failed">Queuing failed</string>
    <string name="connection_failed">Connection failed</string>
    <string name="trust_every_cert">Trust every SSL certificate</string>
    <string name="no_search_apis">No search APIs available. Reload to fix this.</string>
    <string name="ssl_error">SSL handshake error. Consider cheking the trust everyone setting.</string>
    <string name="claim_admin">Claim admin rights</string>
    <string name="show_admin_panel">Admin Panel</string>
    <string name="claim_admin_not_allowed">Not allowed.</string>
    <string name="claim_admin_success">You are admin now</string>
    <string name="admin_action_exit">Shutdown bot</string>
    <string name="admin_action_reset">Reset bot</string>
    <string name="activity_admin_title">Admin Panel</string>
    <string name="edit_permissions">Edit permissions</string>
    <string name="select_playlist">Select active playlist</string>
    <string name="edit">Edit</string>
    <string name="show_permissions">Show %d permissions</string>
    <string name="user_permissions">%s\'s permissions</string>
    <string name="pref_title_server_port">Server port</string>
    <string name="pref_default_server_url">https://localhost:8443/v1/</string>
    <string name="enqueued_by">Enqueued by %s</string>
    <string name="unsuccessful_refresh">Unsuccessful refresh</string>
    <string name="refresh_success">Refresh successful</string>
    <string name="queue_last_played">Enqueue %s again?</string>
    <string name="auto_detect">Auto detect host</string>
    <string name="auto_detect_result">Auto detection result: %s</string>
    <string name="auto_auto_detect">Auto detecting host...</string>
    <string name="title_activity_edit_permissions">Edit permissions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enqueued_song">Enqueued %s</string>
    <string name="queue_top">Move %s to the top of the queue?</string>

    <!-- Strings related to Settings -->

</resources>
