<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:hint="Search for a song"
        android:title="search bar"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/refresh_button"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/claim_admin_rights"
        android:title="@string/claim_admin"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/show_admin_panel"
        android:title="@string/show_admin_panel"
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>
